# Aegis-Alloc

./: CMakeLists.txt  Makefile  README.md
docs/: allocator_design.md
include/aegis_alloc/: Allocator.h  LinearAllocator.h  StackAllocator.h
src/: LinearAllocator.cpp  StackAllocator.cpp
tests/: linear_allocator_stress_test.cpp  sanity_test.cpp
